--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+  </head>
+  <body>
+  </body>
+</html>
